fix: toast overflow

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,9 +23,14 @@ html {
     font-family: 'Comfortaa', sans-serif;
     scroll-behavior: smooth;
     -webkit-font-smoothing: antialiased;
+    width: 100vw !important;
+    overflow-x: hidden;
+  }
+
+  body{
     max-width: 100vw;
     overflow-x: hidden;
-}
+  }
 
 .nav-link {
   background: linear-gradient(to right, rgb(27, 24, 77), rgba(0, 100, 200, 1));
